Improve API and API docs