@@ -9,22 +9,56 @@ import java.util.List;
 
 public class ParticleQueue {
   public static final ParticleQueue INSTANCE = new ParticleQueue();
-  record Entry(ParticleOptions particleOptions, double d, double e, double f, double g, double h, double i){}
+
+  /**
+   * A particle to queue for placement in the world thread.
+   * @param particleOptions This particle's ParticleOptions
+   * @param x x position
+   * @param y y position
+   * @param z z position
+   * @param vx x velocity
+   * @param vy y velocity
+   * @param vz z velocity
+   */
+  record Entry(ParticleOptions particleOptions, double x, double y, double z, double vx, double vy, double vz){}
   List<Entry> queue = new ArrayList<>();
 
-  public static void queue(ParticleOptions particleOptions, double d, double e, double f, double g, double h, double i) {
-    INSTANCE.queue.add(new Entry(particleOptions, d, e, f, g, h, i));
+  /**
+   * Queue a particle for placement during the world render thread.
+   * @param particleOptions This particle's ParticleOptions
+   * @param x x position
+   * @param y y position
+   * @param z z position
+   * @param vx x velocity
+   * @param vy y velocity
+   * @param vz z velocity
+   */
+  public static void queue(ParticleOptions particleOptions, double x, double y, double z, double vx, double vy, double vz) {
+    INSTANCE.queue.add(new Entry(particleOptions, x, y, z, vx, vy, vz));
   }
 
-  public static void queue(ParticleOptions particleOptions, double d, double e, double f) {
-    queue(particleOptions, d, e, f, 0, 0, 0);
+  /**
+   * Queue a particle for placement during the world render thread.
+   * Queues with no velocity
+   * @param particleOptions This particle's ParticleOptions
+   * @param x x position
+   * @param y y position
+   * @param z z position
+   */
+  public static void queue(ParticleOptions particleOptions, double x, double y, double z) {
+    queue(particleOptions, x, y, z, 0, 0, 0);
   }
 
+  /**
+   * Process out the particle queue.
+   * Should only be called from within the level render thread.
+   * @param instance The local level to add particles to
+   */
   public void process(ClientLevel instance) {
     var level = Minecraft.getInstance().level;
     while(level != null && !queue.isEmpty()) {
-      var item = queue.remove(0);
-      level.addParticle(item.particleOptions, item.d, item.e, item.f, item.g, item.h, item.i);
+      var item = queue.removeFirst();
+      level.addParticle(item.particleOptions, item.x, item.y, item.z, item.vx, item.vy, item.vz);
     }
 
   }
